# learned-cat

./: .gitignore  CHANGES.md  Cargo.toml  Makefile  README.md  architecture.drawio  config.toml  create_db.sql  go.mod  learned-cat.service  run_tests  settings.json  settings.toml  test.py
cmd/sshtest/: main.go
cmd/sshtest-daemon/: main.go
crates/lc-config/: Cargo.toml
crates/lc-config/src/: lib.rs  parsetest.rs
crates/lc-database/: Cargo.toml
crates/lc-database/migrations/2025-01-04-110134_create_tests/: down.sql  up.sql
crates/lc-database/src/: lib.rs  models.rs  schema.rs
crates/lc-examiner/: Cargo.toml
crates/lc-examiner/src/: examiner.rs  lib.rs  network.rs  schema.rs  settings.rs
crates/lc-exammanager/: Cargo.toml
crates/lc-exammanager/src/: exammanager.rs  lib.rs
crates/lc-reporter/: Cargo.toml
crates/lc-reporter/src/: csv_reporter.rs  lib.rs
crates/lc-server/: Cargo.toml
crates/lc-server/src/: lib.rs  socketserver.rs
crates/learned-cat-config/: Cargo.toml
crates/learned-cat-config/src/: lib.rs  parsetest.rs
crates/learned-cat-database/: Cargo.toml
crates/learned-cat-database/migrations/2025-01-04-110134_create_tests/: down.sql  up.sql
crates/learned-cat-database/src/: lib.rs  models.rs  schema.rs
crates/learned-cat-interfaces/: Cargo.toml
crates/learned-cat-interfaces/src/: lib.rs  network.rs  schema.rs  settings.rs
example-config/: settings.toml
example-config/tests/: algo.md  linux.md
learned-cat-config/src/: lib.rs
learned-cat-database/: diesel.toml
learned-cat-database/migrations/2025-01-04-110134_create_tests/: down.sql  up.sql
learned-cat-database/src/: lib.rs  models.rs  schema.rs
learned-cat-interfaces/src/: lib.rs  network.rs  settings.rs
rst/: Cargo.toml  users.csv
rst/src/: presenter.rs
rst/src/model/: parsetest.rs
src/: client.rs  daemon.rs  database.rs  errors.rs  examiner.rs  init.rs  lib.rs  main.rs  model.rs  network.rs  network_structs.rs  parsetest.rs  presenter.rs  schema.rs  server.rs  speedometer.rs  sshtest-daemon.rs  sshtest.rs
src/model/: errors.rs  init.rs  mod.rs  network.rs  parsetest.rs
src/network/: mod.rs
sshtest-dir/: settings.toml
sshtest-dir/tests/: linux.md  python.md
tests/: linux.md  python.md
