[package]
name = "learned-cat"
version = "0.2.0"
edition = "2021"


[dependencies]
clap = { version = "^4.5.2", features = ["derive"] }
whoami = "^1.4.0"
bincode = "^1.3.3"
chrono = { version = "^0.4.35", features = ["serde"] }
serde = { version = "^1.0.197", features = ["derive"] }
walkdir = "2.5.0"
rustyline = "14.0.0"
log = "0.4.25"
env_logger = "0.11.6"
log4rs = "1.3.0"

[dependencies.lc-examiner]
path = "crates/lc-examiner"

[dependencies.lc-exammanager]
path = "crates/lc-exammanager"

[dependencies.lc-database]
path = "crates/lc-database"

[dependencies.lc-config]
path = "crates/lc-config"

[dependencies.lc-reporter]
path = "crates/lc-reporter"

[dependencies.lc-server]
path = "crates/lc-server"


[[bin]]
name = "learned-cat-daemon"
path = "src/daemon.rs"

[[bin]]
name = "learned-cat"
path = "src/client.rs"

[[bin]]
name = "speedometer"
path = "src/speedometer.rs"
