[package]
name = "lc-database"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.39"
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
# build libsqlite3 as part of the build process
# uncomment this line if you run into setup issues
# libsqlite3-sys = { version = "0.30", features = ["bundled"] }
dotenvy = "0.15"
log = "0.4.25"


[dependencies.lc-examiner]
path = "../lc-examiner"

[dependencies.lc-reporter]
path = "../lc-reporter"
