[package]
name = "lc-reporter"
version = "0.2.0"
authors = ["Dovydenkov Aleksandr <asdovydenkov@yandex.ru>"]
edition = "2021"

[dependencies]
serde = { version = "^1.0.197", features = ["derive"] }
chrono = { version = "^0.4.35", features = ["serde"] }
log = "0.4.25"
toml = { version = "^0.8.10", features = ["display"] }
