[package]
name = "lc-server"
version = "0.2.0"
authors = ["Dovydenkov Aleksandr <asdovydenkov@yandex.ru>"]
edition = "2021"

[dependencies]
bincode = "^1.3.3"
log = "0.4.25"
ntest = "0.9.3"

[dependencies.lc-examiner]
path = "../lc-examiner"

[dependencies.lc-exammanager]
path = "../lc-exammanager"
